Implementação da feature de descriptografia de dados sensíveis do provider senhasegura (#3582)
Signed-off-by: Felipe Oliveira dos Santos <felipeoliveira.s.br@gmail.com>

--- a/docs/snippets/senhasegura-dsm-clustersecretstore.yaml
+++ b/docs/snippets/senhasegura-dsm-clustersecretstore.yaml
@@ -15,3 +15,6 @@ spec:
           key: CLIENT_SECRET
           namespace: senhasegura # Namespace of Secret "senhasegura-dsm-auth"
       ignoreSslCertificate: false # Optional
+      privateKeySecretRef: # Optional, used only when sensitive data has been encrypted in senhasegura
+        key: PRIVATE_KEY
+        name: senhasegura-dsm-auth
