--- a/docs/snippets/senhasegura-dsm-secretstore.yaml
+++ b/docs/snippets/senhasegura-dsm-secretstore.yaml
@@ -14,3 +14,6 @@ spec:
           name: senhasegura-dsm-auth
           key: CLIENT_SECRET
       ignoreSslCertificate: false # Optional
+      privateKeySecretRef: # Optional, used only when sensitive data has been encrypted in senhasegura
+        key: PRIVATE_KEY
+        name: senhasegura-dsm-auth
