--- a/deploy/crds/bundle.yaml
+++ b/deploy/crds/bundle.yaml
@@ -98,6 +98,33 @@ spec:
                                   - Base64URL
                                   - None
                                 type: string
+                              decryptingStrategy:
+                                default:
+                                  scheme: None
+                                description: Used to define a decrypting Strategy
+                                properties:
+                                  hash:
+                                    default: SHA1
+                                    description: Used to define a decrypting Hash
+                                    enum:
+                                      - None
+                                      - SHA1
+                                    type: string
+                                  privateKeyType:
+                                    default: PKCS8
+                                    description: Used to define a decrypting Private Key type
+                                    enum:
+                                      - None
+                                      - PKCS8
+                                    type: string
+                                  scheme:
+                                    default: None
+                                    description: Used to define a decrypting Scheme
+                                    enum:
+                                      - None
+                                      - RSA-OAEP
+                                    type: string
+                                type: object
                               key:
                                 description: Key is the key used in the Provider, mandatory
                                 type: string
@@ -196,6 +223,33 @@ spec:
                                   - Base64URL
                                   - None
                                 type: string
+                              decryptingStrategy:
+                                default:
+                                  scheme: None
+                                description: Used to define a decrypting Strategy
+                                properties:
+                                  hash:
+                                    default: SHA1
+                                    description: Used to define a decrypting Hash
+                                    enum:
+                                      - None
+                                      - SHA1
+                                    type: string
+                                  privateKeyType:
+                                    default: PKCS8
+                                    description: Used to define a decrypting Private Key type
+                                    enum:
+                                      - None
+                                      - PKCS8
+                                    type: string
+                                  scheme:
+                                    default: None
+                                    description: Used to define a decrypting Scheme
+                                    enum:
+                                      - None
+                                      - RSA-OAEP
+                                    type: string
+                                type: object
                               key:
                                 description: Key is the key used in the Provider, mandatory
                                 type: string
@@ -4375,6 +4429,23 @@ spec:
                         module:
                           description: Module defines which senhasegura module should be used to get secrets
                           type: string
+                        privateKeySecretRef:
+                          description: Usage for cases in which the authorization by application encrypts sensitive data
+                          properties:
+                            key:
+                              description: |-
+                                The key of the entry in the Secret resource's `data` field to be used. Some instances of this field may be
+                                defaulted, in others it may be required.
+                              type: string
+                            name:
+                              description: The name of the Secret resource being referred to.
+                              type: string
+                            namespace:
+                              description: |-
+                                Namespace of the resource being referred to. Ignored if referent is not cluster-scoped. cluster-scoped defaults
+                                to the namespace of the referent.
+                              type: string
+                          type: object
                         url:
                           description: URL of senhasegura
                           type: string
@@ -5603,6 +5674,33 @@ spec:
                               - Base64URL
                               - None
                             type: string
+                          decryptingStrategy:
+                            default:
+                              scheme: None
+                            description: Used to define a decrypting Strategy
+                            properties:
+                              hash:
+                                default: SHA1
+                                description: Used to define a decrypting Hash
+                                enum:
+                                  - None
+                                  - SHA1
+                                type: string
+                              privateKeyType:
+                                default: PKCS8
+                                description: Used to define a decrypting Private Key type
+                                enum:
+                                  - None
+                                  - PKCS8
+                                type: string
+                              scheme:
+                                default: None
+                                description: Used to define a decrypting Scheme
+                                enum:
+                                  - None
+                                  - RSA-OAEP
+                                type: string
+                            type: object
                           key:
                             description: Key is the key used in the Provider, mandatory
                             type: string
@@ -5701,6 +5799,33 @@ spec:
                               - Base64URL
                               - None
                             type: string
+                          decryptingStrategy:
+                            default:
+                              scheme: None
+                            description: Used to define a decrypting Strategy
+                            properties:
+                              hash:
+                                default: SHA1
+                                description: Used to define a decrypting Hash
+                                enum:
+                                  - None
+                                  - SHA1
+                                type: string
+                              privateKeyType:
+                                default: PKCS8
+                                description: Used to define a decrypting Private Key type
+                                enum:
+                                  - None
+                                  - PKCS8
+                                type: string
+                              scheme:
+                                default: None
+                                description: Used to define a decrypting Scheme
+                                enum:
+                                  - None
+                                  - RSA-OAEP
+                                type: string
+                            type: object
                           key:
                             description: Key is the key used in the Provider, mandatory
                             type: string
@@ -10155,6 +10280,23 @@ spec:
                         module:
                           description: Module defines which senhasegura module should be used to get secrets
                           type: string
+                        privateKeySecretRef:
+                          description: Usage for cases in which the authorization by application encrypts sensitive data
+                          properties:
+                            key:
+                              description: |-
+                                The key of the entry in the Secret resource's `data` field to be used. Some instances of this field may be
+                                defaulted, in others it may be required.
+                              type: string
+                            name:
+                              description: The name of the Secret resource being referred to.
+                              type: string
+                            namespace:
+                              description: |-
+                                Namespace of the resource being referred to. Ignored if referent is not cluster-scoped. cluster-scoped defaults
+                                to the namespace of the referent.
+                              type: string
+                          type: object
                         url:
                           description: URL of senhasegura
                           type: string
