Afim de melhorar a experiencia com o uso da feature de descriptografia de dados sensiveis, implementado metodo get private key na interface do providers
Signed-off-by: Felipe Oliveira dos Santos <felipeoliveira.s.br@gmail.com>

--- a/config/crds/bases/external-secrets.io_clusterexternalsecrets.yaml
+++ b/config/crds/bases/external-secrets.io_clusterexternalsecrets.yaml
@@ -114,6 +114,8 @@ spec:
                                   enum:
                                   - None
                                   - SHA1
+                                  - SHA256
+                                  - SHA512
                                   type: string
                                 privateKeyType:
                                   default: PKCS8
@@ -122,6 +124,7 @@ spec:
                                   enum:
                                   - None
                                   - PKCS8
+                                  - PKCS1
                                   type: string
                                 scheme:
                                   default: None
@@ -247,6 +250,8 @@ spec:
                                   enum:
                                   - None
                                   - SHA1
+                                  - SHA256
+                                  - SHA512
                                   type: string
                                 privateKeyType:
                                   default: PKCS8
@@ -255,6 +260,7 @@ spec:
                                   enum:
                                   - None
                                   - PKCS8
+                                  - PKCS1
                                   type: string
                                 scheme:
                                   default: None
