--- a/config/crds/bases/external-secrets.io_externalsecrets.yaml
+++ b/config/crds/bases/external-secrets.io_externalsecrets.yaml
@@ -379,6 +379,8 @@ spec:
                               enum:
                               - None
                               - SHA1
+                              - SHA256
+                              - SHA512
                               type: string
                             privateKeyType:
                               default: PKCS8
@@ -387,6 +389,7 @@ spec:
                               enum:
                               - None
                               - PKCS8
+                              - PKCS1
                               type: string
                             scheme:
                               default: None
@@ -512,6 +515,8 @@ spec:
                               enum:
                               - None
                               - SHA1
+                              - SHA256
+                              - SHA512
                               type: string
                             privateKeyType:
                               default: PKCS8
@@ -520,6 +525,7 @@ spec:
                               enum:
                               - None
                               - PKCS8
+                              - PKCS1
                               type: string
                             scheme:
                               default: None
