--- a/deploy/crds/bundle.yaml
+++ b/deploy/crds/bundle.yaml
@@ -109,6 +109,8 @@ spec:
                                     enum:
                                       - None
                                       - SHA1
+                                      - SHA256
+                                      - SHA512
                                     type: string
                                   privateKeyType:
                                     default: PKCS8
@@ -116,6 +118,7 @@ spec:
                                     enum:
                                       - None
                                       - PKCS8
+                                      - PKCS1
                                     type: string
                                   scheme:
                                     default: None
@@ -234,6 +237,8 @@ spec:
                                     enum:
                                       - None
                                       - SHA1
+                                      - SHA256
+                                      - SHA512
                                     type: string
                                   privateKeyType:
                                     default: PKCS8
@@ -241,6 +246,7 @@ spec:
                                     enum:
                                       - None
                                       - PKCS8
+                                      - PKCS1
                                     type: string
                                   scheme:
                                     default: None
@@ -5724,6 +5730,8 @@ spec:
                                 enum:
                                   - None
                                   - SHA1
+                                  - SHA256
+                                  - SHA512
                                 type: string
                               privateKeyType:
                                 default: PKCS8
@@ -5731,6 +5739,7 @@ spec:
                                 enum:
                                   - None
                                   - PKCS8
+                                  - PKCS1
                                 type: string
                               scheme:
                                 default: None
@@ -5849,6 +5858,8 @@ spec:
                                 enum:
                                   - None
                                   - SHA1
+                                  - SHA256
+                                  - SHA512
                                 type: string
                               privateKeyType:
                                 default: PKCS8
@@ -5856,6 +5867,7 @@ spec:
                                 enum:
                                   - None
                                   - PKCS8
+                                  - PKCS1
                                 type: string
                               scheme:
                                 default: None
